--- a/senolzengin/Pages/Shared/_Layout.cshtml
+++ b/senolzengin/Pages/Shared/_Layout.cshtml
@@ -46,11 +46,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2019 - senolzengin - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
-    </footer>
+    @* <footer class="border-top footer text-muted"> *@
+    @*     <div class="container"> *@
+    @*         &copy; 2019 - senolzengin - <a asp-area="" asp-page="/Privacy">Privacy</a> *@
+    @*     </div> *@
+    @* </footer> *@
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
