--- a/senolzengin/Pages/Index.cshtml
+++ b/senolzengin/Pages/Index.cshtml
@@ -170,13 +170,13 @@
                                 <span class="pro-title"> Name </span> <span class="pro-detail">@Model.items.Data.Name</span>
                             </li>
                             <li>
-                                <span class="pro-title"> Age </span> <span class="pro-detail">25 Years</span>
+                                <span class="pro-title"> Age </span> <span class="pro-detail">@Model.items.Data.Age</span>
                             </li>
                             <li>
-                                <span class="pro-title"> Experience </span> <span class="pro-detail">4 Years</span>
+                                <span class="pro-title"> Experience </span> <span class="pro-detail">@Model.items.Data.Experience</span>
                             </li>
                             <li>
-                                <span class="pro-title"> Country </span> <span class="pro-detail">USA</span>
+                                <span class="pro-title"> Country </span> <span class="pro-detail">@Model.items.Data.@Model.items.Data.Name</span>
                             </li>
                             <li>
                                 <span class="pro-title"> Location </span> <span class="pro-detail">@Model.items.Data.Location</span>
@@ -206,41 +206,13 @@
         <div class="row">
             <!-- Services item -->
             <div class="col-md-6 col-lg-3 col-xs-12">
-                <div class="services-item wow fadeInDown" data-wow-delay="0.3s">
-                    <div class="icon">
-                        <i class="icon-grid"></i>
-                    </div>
-                    <div class="services-content">
-                        <h3>
-                            <a href="#">Front-end Development</a>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Services item -->
-            <div class="col-md-6 col-lg-3 col-xs-12">
-                <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
-                    <div class="icon">
-                        <i class="icon-layers"></i>
-                    </div>
-                    <div class="services-content">
-                        <h3>
-                            <a href="#">Graphic Design</a>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Services item -->
-            <div class="col-md-6 col-lg-3 col-xs-12">
                 <div class="services-item wow fadeInDown" data-wow-delay="0.9s">
                     <div class="icon">
                         <i class="icon-briefcase"></i>
                     </div>
                     <div class="services-content">
                         <h3>
-                            <a href="#">Business Branding</a>
+                            <a href="#">Team Leader</a>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
                     </div>
@@ -254,12 +226,42 @@
                     </div>
                     <div class="services-content">
                         <h3>
-                            <a href="#">Consultancy</a>
+                            <a href="#">Consultant</a>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
                     </div>
                 </div>
             </div>
+            <!-- Services item -->
+            <div class="col-md-6 col-lg-3 col-xs-12">
+                <div class="services-item wow fadeInDown" data-wow-delay="0.3s">
+                    <div class="icon">
+                        <i class="icon-grid"></i>
+                    </div>
+                    <div class="services-content">
+                        <h3>
+                            <a href="#">Back-end Development</a>
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Services item -->
+            <div class="col-md-6 col-lg-3 col-xs-12">
+                <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
+                    <div class="icon">
+                        <i class="icon-layers"></i>
+                    </div>
+                    <div class="services-content">
+                        <h3>
+                            <a href="#">Analysist & Development</a>
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </section>
