--- a/senolzengin/Pages/Index.cshtml
+++ b/senolzengin/Pages/Index.cshtml
@@ -111,8 +111,8 @@
                 <div class="col-md-12 col-sm-12 text-center">
                     <div class="contents">
                         <h5 class="script-font wow fadeInUp" data-wow-delay="0.2s">Hi This is</h5>
-                        <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">@Model.items.Data.Name &nbsp;@Model.items.Data.Surname</h2>
-                        <p class="script-font wow fadeInUp" data-wow-delay="0.6s">@Model.items.Data.Title</p>
+                        <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">@Model.ItemInformations.Data.Name &nbsp;@Model.ItemInformations.Data.Surname</h2>
+                        <p class="script-font wow fadeInUp" data-wow-delay="0.6s">@Model.ItemInformations.Data.Title</p>
                         <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                             <li>
                                 <a class="facebook" href="#">
@@ -167,25 +167,25 @@
                     <div class="about-profile">
                         <ul class="admin-profile">
                             <li>
-                                <span class="pro-title"> Name </span> <span class="pro-detail">@Model.items.Data.Name</span>
+                                <span class="pro-title"> Name </span> <span class="pro-detail">@Model.ItemInformations.Data.Name</span>
                             </li>
                             <li>
-                                <span class="pro-title"> Age </span> <span class="pro-detail">@Model.items.Data.Age</span>
+                                <span class="pro-title"> Age </span> <span class="pro-detail">@Model.ItemInformations.Data.Age</span>
                             </li>
                             <li>
-                                <span class="pro-title"> Experience </span> <span class="pro-detail">@Model.items.Data.Experience</span>
+                                <span class="pro-title"> Experience </span> <span class="pro-detail">@Model.ItemInformations.Data.Experience</span>
                             </li>
                             <li>
-                                <span class="pro-title"> Country </span> <span class="pro-detail">@Model.items.Data.@Model.items.Data.Name</span>
+                                <span class="pro-title"> Country </span> <span class="pro-detail">@Model.ItemInformations.Data.Name</span>
                             </li>
                             <li>
-                                <span class="pro-title"> Location </span> <span class="pro-detail">@Model.items.Data.Location</span>
+                                <span class="pro-title"> Location </span> <span class="pro-detail">@Model.ItemInformations.Data.Location</span>
                             </li>
                             <li>
-                                <span class="pro-title"> e-mail </span> <span class="pro-detail">@Model.items.Data.Email</span>
+                                <span class="pro-title"> e-mail </span> <span class="pro-detail">@Model.ItemInformations.Data.Email</span>
                             </li>
                             <li>
-                                <span class="pro-title"> Phone </span> <span class="pro-detail">@Model.items.Data.Telephone</span>
+                                <span class="pro-title"> Phone </span> <span class="pro-detail">@Model.ItemInformations.Data.Telephone</span>
                             </li>
                             <li>
                                 <span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span>
@@ -278,27 +278,18 @@
                             <i class="icon-graduation"></i>
                             <h2 class="timelin-title">Education</h2>
                         </li>
-                        <li>
-                            <div class="content-text">
-                                <h3 class="line-title">Bsc In CSE - Yale University</h3>
-                                <span>2012 - 2016</span>
-                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="content-text">
-                                <h3 class="line-title">Higher Secondary School - San Francisco College</h3>
-                                <span>2010 - 2012</span>
-                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="content-text">
-                                <h3 class="line-title">Secondary School - Labratory High School</h3>
-                                <span>2005 - 2010</span>
-                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
-                            </div>
-                        </li>
+                         @foreach (var data in  Model.ItemEducations)
+                         {
+                             <li>
+                                 <div class="content-text">
+                                     <h3 class="line-title">@data.Data.SchoolName</h3>
+                                     <span>@data.Data.Date</span>
+                                     <p class="line-text">@data.Data.Description</p>
+                                 </div>
+                             </li>
+
+                         }
+
                     </ul>
                 </div>
             </div>
@@ -349,14 +340,14 @@
                                 <div class="contact-icon">
                                     <i class="fa fa-map-marker"></i>
                                 </div>
-                                <p>@Model.items.Data.Location</p>
+                                <p>@Model.ItemInformations.Data.Location</p>
                             </div>
                             <div class="single-contact">
                                 <div class="contact-icon">
                                     <i class="fa fa-envelope"></i>
                                 </div>
                                 <p>
-                                    <a href="mailto:@Model.items.Data.Email">@Model.items.Data.Email</a>
+                                    <a href="mailto:@Model.ItemInformations.Data.Email">@Model.ItemInformations.Data.Email</a>
                                 </p>
                                 @* <p><a href="mailto:tomsaulnier@gmail.com">tomsaulnier@gmail.com</a></p> *@
                             </div>
@@ -365,7 +356,7 @@
                                     <i class="fa fa-phone"></i>
                                 </div>
                                 <p>
-                                    <a href="#">@Model.items.Data.Telephone</a>
+                                    <a href="#">@Model.ItemInformations.Data.Telephone</a>
                                 </p>
                                 @* <p><a href="#">+ (00) 123 344 789</a></p> *@
                             </div>
