--- a/senolzengin/Pages/Index.cshtml
+++ b/senolzengin/Pages/Index.cshtml
@@ -115,28 +115,28 @@
                         <p class="script-font wow fadeInUp" data-wow-delay="0.6s">@Model.ItemInformation.Data.Title</p>
                         <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                             <li>
-                                <a class="facebook" href="#">
+                                <a class="facebook" href="https://www.facebook.com/senlzngn">
                                     <i class="icon-social-facebook"></i>
                                 </a>
                             </li>
                             <li>
-                                <a class="twitter" href="#">
+                                <a class="twitter" href="https://twitter.com/snlzngn">
                                     <i class="icon-social-twitter"></i>
                                 </a>
                             </li>
                             <li>
-                                <a class="instagram" href="#">
+                                <a class="instagram" href="https://www.instagram.com/senlzngn/">
                                     <i class="icon-social-instagram"></i>
                                 </a>
                             </li>
                             <li>
-                                <a class="linkedin" href="#">
+                                <a class="linkedin" href="https://tr.linkedin.com/in/senolzengin">
                                     <i class="icon-social-linkedin"></i>
                                 </a>
                             </li>
                             <li>
-                                <a class="google" href="#">
-                                    <i class="icon-social-google"></i>
+                                <a class="google" href="https://github.com/zenginsenol">
+                                    <i class="icon-social-github"></i>
                                 </a>
                             </li>
                         </ul>
@@ -163,7 +163,7 @@
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
                     <h3>Hi Guys!</h3>
-                    <p>Est diam venenatis arcu lacus ad. Duis quis eros. Cursus et rutrum eleifend sollicitudin lacinia justo id turpis. Nec convallis integer. Odio eget duis. Nulla aenean et. Blandit varius sollicitudin. Pellentesque leo primis neque urna magnis. Elit ut sollicitudin. Et est a nam dolores eget itaque sagittis et parturient duis est eleifend sociis rutrum odio viverra integer.</p>
+                    <p> @Model.ItemInformation.Data.PreWrite</p>
                     <div class="about-profile">
                         <ul class="admin-profile">
                             <li>
@@ -212,9 +212,9 @@
                     </div>
                     <div class="services-content">
                         <h3>
-                            <a href="#">Team Leader</a>
+                            <a href="#">@Model.ItemWhatIDo.FirstOrDefault(a=>a.Data.OrderNo=="1")?.Data.Title</a>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                        <p>@Model.ItemWhatIDo.FirstOrDefault(a=>a.Data.OrderNo=="1")?.Data.Description</p>
                     </div>
                 </div>
             </div>
@@ -226,9 +226,9 @@
                     </div>
                     <div class="services-content">
                         <h3>
-                            <a href="#">Consultant</a>
+                            <a href="#">@Model.ItemWhatIDo.FirstOrDefault(a=>a.Data.OrderNo=="2")?.Data.Title</a>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                        <p>@Model.ItemWhatIDo.FirstOrDefault(a=>a.Data.OrderNo=="2")?.Data.Description</p>
                     </div>
                 </div>
             </div>
@@ -240,9 +240,9 @@
                     </div>
                     <div class="services-content">
                         <h3>
-                            <a href="#">Back-end Development</a>
+                            <a href="#">@Model.ItemWhatIDo.FirstOrDefault(a=>a.Data.OrderNo=="3")?.Data.Title</a>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                        <p>@Model.ItemWhatIDo.FirstOrDefault(a=>a.Data.OrderNo=="3")?.Data.Description</p>
                     </div>
                 </div>
             </div>
@@ -254,9 +254,9 @@
                     </div>
                     <div class="services-content">
                         <h3>
-                            <a href="#">Analysist</a>
+                            <a href="#">@Model.ItemWhatIDo.FirstOrDefault(a=>a.Data.OrderNo=="4")?.Data.Title</a>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Suspendisse condi.</p>
+                        <p>@Model.ItemWhatIDo.FirstOrDefault(a=>a.Data.OrderNo=="4")?.Data.Description</p>
                     </div>
                 </div>
             </div>
@@ -271,7 +271,7 @@
 <div id="resume" class="section-padding">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="education wow fadeInRight" data-wow-delay="0.3s">
                     <ul class="timeline">
                         <li>
@@ -293,14 +293,14 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="col-lg-4 col-md- col-sm-6">
                 <div class="experience wow fadeInRight" data-wow-delay="0.6s">
                     <ul class="timeline">
                         <li>
                             <i class="icon-briefcase"></i>
                             <h2 class="timelin-title">Experience</h2>
                         </li>
-                        @foreach (var data in  Model.ItemExperience)
+                        @foreach (var data in  Model.ItemExperience.Take(3))
                         {
                             <li>
                                 <div class="content-text">
@@ -314,6 +314,27 @@
                     </ul>
                 </div>
             </div>
+             <div class="col-lg-4 col-md- col-sm-6">
+                            <div class="experience wow fadeInRight" data-wow-delay="0.6s">
+                                <ul class="timeline">
+                                    <li>
+                                        <i class="icon-briefcase"></i>
+                                        <h2 class="timelin-title">Experience</h2>
+                                    </li>
+                                    @foreach (var data in  Model.ItemExperience.Skip(3).Take(3))
+                                    {
+                                        <li>
+                                            <div class="content-text">
+                                                <h3 class="line-title">@data.Data.Title</h3>
+                                                <span>@data.Data.Date</span>
+                                                <p class="line-text">@data.Data.Description</p>
+                                                <p class="line-text">@data.Data.Technology</p>
+                                            </div>
+                                        </li>
+                                    }
+                                </ul>
+                            </div>
+                        </div>
         </div>
     </div>
 </div>
@@ -363,43 +384,7 @@
 <!-- Contact Section End -->
 
 <!-- Footer Section Start -->
-<footer class="footer-area section-padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="footer-text text-center wow fadeInDown" data-wow-delay="0.3s">
-                    <ul class="social-icon">
-                        <li>
-                            <a class="facebook" href="#">
-                                <i class="icon-social-facebook"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="twitter" href="#">
-                                <i class="icon-social-twitter"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="instagram" href="#">
-                                <i class="icon-social-instagram"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="instagram" href="#">
-                                <i class="icon-social-linkedin"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="instagram" href="#">
-                                <i class="icon-social-google"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
+
 <!-- Footer Section End -->
 
 <!-- Go to Top Link -->
