--- a/senolzengin/wwwroot/assets/css/main.css
+++ b/senolzengin/wwwroot/assets/css/main.css
@@ -403,7 +403,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 
 .timeline li .line-title {
   font-size: 16px;
-  line-height: 6px;
+  /*line-height: 6px;*/
 }
 
 .timeline li span {
