edit html template

--- a/senolzengin/Pages/Index.cshtml
+++ b/senolzengin/Pages/Index.cshtml
@@ -50,11 +50,7 @@
             </div>
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="onepage-nev navbar-nav mr-auto w-100 justify-content-end clearfix">
-                    @* <li class="nav-item active"> *@
-                    @*     <a class="nav-link" href="#hero-area"> *@
-                    @*         Home *@
-                    @*     </a> *@
-                    @* </li> *@
+                 
                     <li class="nav-item active">
                         <a class="nav-link" href="#about">
                             About
@@ -82,9 +78,7 @@
 
         <!-- Mobile Menu Start -->
         <ul class="onepage-nev mobile-menu">
-            @* <li> *@
-            @*     <a href="#home">Home</a> *@
-            @* </li> *@
+       
             <li>
                 <a href="#about">about</a>
             </li>
@@ -176,7 +170,7 @@
                                 <span class="pro-title"> Experience </span> <span class="pro-detail">@Model.ItemInformation.Data.Experience</span>
                             </li>
                             <li>
-                                <span class="pro-title"> Country </span> <span class="pro-detail">@Model.ItemInformation.Data.Name</span>
+                                <span class="pro-title"> Country </span> <span class="pro-detail">@Model.ItemInformation.Data.Country</span>
                             </li>
                             <li>
                                 <span class="pro-title"> Location </span> <span class="pro-detail">@Model.ItemInformation.Data.Location</span>
@@ -360,7 +354,6 @@
                                 <p>
                                     <a href="mailto:@Model.ItemInformation.Data.Email">@Model.ItemInformation.Data.Email</a>
                                 </p>
-                                @* <p><a href="mailto:tomsaulnier@gmail.com">tomsaulnier@gmail.com</a></p> *@
                             </div>
                             <div class="single-contact">
                                 <div class="contact-icon">
@@ -369,7 +362,6 @@
                                 <p>
                                     <a href="#">@Model.ItemInformation.Data.Telephone</a>
                                 </p>
-                                @* <p><a href="#">+ (00) 123 344 789</a></p> *@
                             </div>
                         </div>
                     </div>
